test/Sema/Inputs/circularity_multifile_error_helper.swift
struct External {
  var member: Something // expected-error {{cannot find type 'Something' in scope}}
}

struct OtherExternal {}
